--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/config/ltmain.m4sh (func_mode_link): In GNU ld script,
+	do not quote object file names, for Intel icc 9.0 IPO link.
+
 2006-08-22  Eric Blake  <ebb9@byu.net>
 
 	* libltdl/m4/ltdl.m4 (LTDL_INIT): Avoid macros marked obsolete in
