--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-08-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libtool.m4 (AC_DEPLIBS_CHECK_METHOD) [ mingw, pw32 ]:
+	If `file' is present, use `func_win32_libid' rather than
+	`objdump -f', to facilitate cross-compilation.
+	Reported by Pierre Ossman <ossman@cendio.se>.
+
 2006-08-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* ltmain.in (execute mode): Also search the directory above `$objdir'
