--- a/NEWS
+++ b/NEWS
@@ -34,6 +34,7 @@ New in 1.9h: 2005-??-??; CVS version 2.1a, Libtool team:
 * Fix error with -version-info on systems with version_type=none, such
   as BeOS.
 * Initial support for the Sun compiler suite on GNU/Linux.
+* Improved support for GNU/kFreeBSD and GNU/NetBSD.
 * Bug fixes.
 
 New in 1.9f: 2004-10-23; CVS version 1.9e, Libtool team:
