--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-09-17  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [ linux ]
+	[ k*bsd*-gnu ]: Test if ld sets DT_RUNPATH; in that case, set
+	shlib_overrides_runpath to `yes'.  Fixes test failure of new
+	test on Gentoo GNU/Linux.
+
 	* tests/shlibpath.at: New file, with...
 	(shlibpath_overrides_runpath): ...new test.
 	* Makefile.am: Update.
