--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-09-17  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
+	[ openbsd ]: Set `hardcode_direct_absolute', to prefer rpath
+	over putting absolute file names in NEEDED entries.
+	* NEWS: Update.
+	Reported by Jake Meuser and others.
+
 	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [ linux ]
 	[ k*bsd*-gnu ]: Test if ld sets DT_RUNPATH; in that case, set
 	shlib_overrides_runpath to `yes'.  Fixes test failure of new
