--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-18  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [ linux ]
+	[k*bsd*-gnu ]: Fix brown paper bag: save and restore `libdir'.
+
 2006-09-17  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* tests/duplicate_deps.at: New file.  Test circular depending
