--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-13  Eric Blake  <ebb9@byu.net>
+
+	* libltdl/ltdl.c (unload_deplibs, load_deplibs): Avoid memory
+	leaks.
+
 2006-08-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* ltmain.in (link mode): Pass through `--coverage', for GCC.
