--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-10-19  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER): Improve
+	multilib support.
+	Reported by Kate Minola <kate01123@gmail.com> and others.
+
 2006-10-13  Eric Blake  <ebb9@byu.net>
 
 	* libltdl/ltdl.c (load_deplibs): Avoid memory leak on failure.
