--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-22  Peter O'Gorman  <peter@pogma.com>
+
+	* ltmain.in: Add -F* to flags that are passed to the linker.
+	Reported by SIGOURE Benoit <sigoure.benoit@lrde.epita.fr>
+
 2006-10-19  Peter O'Gorman  <peter@pogma.com>
 
 	* libtool.m4 (AC_LIBTOOL_SYS_DYNAMIC_LINKER): Improve multilib
