--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-10-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libtoolize.m4sh (func_fixup_Makefile): Fix missing
+	substitution for nonrecursive mode.  Remove otherwise-empty
+	continuation lines in the output file.
+	Report by Bob Friesenhahn.
+
 2006-10-22  Peter O'Gorman  <peter@pogma.com>
 
 	* libltdl/config/ltmain.m4sh: Add -F* to flags that are passed
