--- a/NEWS
+++ b/NEWS
@@ -35,6 +35,7 @@ New in 1.9h: 2005-??-??; CVS version 2.1a, Libtool team:
   as BeOS.
 * Initial support for the Sun compiler suite on GNU/Linux.
 * Improved support for GNU/kFreeBSD and GNU/NetBSD.
+* Search paths with GCC on multilib systems like x86_64 have been fixed.
 * Bug fixes.
 
 New in 1.9f: 2004-10-23; CVS version 1.9e, Libtool team:
