--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* NEWS: Account for recent fix.
+
 2006-10-22  Peter O'Gorman  <peter@pogma.com>
 
 	* ltmain.in: Add -F* to flags that are passed to the linker.
