--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-10-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/tagtrace.test: SKIP if `autoconf --trace' exits 63 or 1,
+	for various possible (valid) error cases.  Also output stderr,
+	to help with analysis.
+
 	* NEWS: Account for recent multilib fix.
 	* tests/search-path.at: New test, to provide at least a weak
 	test.
