--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-10-24  Paul Eggert  <eggert@cs.ucla.edu>,
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* doc/libtool.texi (Distributing libltdl): In recursive and
+	nonrecursive mode, a config header is now required.
+	* libltdl/argz.c: Remove check for HAVE_CONFIG_H, to conform
+	to gnulib's policy of including config.h unconditionally.
+
 2006-10-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/link-order2.at: New test to show one case where ordering
