--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/link-order2.at: Simplify logic to be a bit more self
+	documenting.  Suggested by Gary V. Vaughan.
+
 2006-10-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/link-order2.at: Add missing $bindir setting.  Prevent
