--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-12-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (--version): Do not output leading blank line,
+	added inadvertently after 1.5.22.
+	Report by John Vandenberg <jayvdb@gmail.com>.
+
 2006-10-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* NEWS: Account for recent fix.
