--- a/NEWS
+++ b/NEWS
@@ -47,7 +47,7 @@ New in 1.5.20: 2005-08-31; CVS version 1.5.19a, Libtool team:
 * Bug Fixes.
 
 New in 1.5.18: 2005-05-16; CVS version 1.5.17a, Libtool team:
-* Fix regression in 1.5.16 to not install libtldl data files from
+* Fix regression in 1.5.16 to not install libltdl data files from
   `libtoolize --ltdl'ed software packages.
 * Bug Fixes.
 
