--- a/THANKS
+++ b/THANKS
@@ -75,6 +75,7 @@
   Carl D. Roth			roth@cse.ucsc.edu
   Chris P. Ross			cross@eng.us.uu.net
   Christian Biesinger		cbiesinger@web.de
+  Christopher Hulbert		cchgroupmail@gmail.com
   Dalibor Topic			robilad@kaffe.org
   Daniel Reed			n@ml.org
   DJ Delorie			dj@delorie.com
